@@ -61,7 +61,7 @@
 #include <dmalloc.h>
 #endif
 
-static char software_version[] = "$Id: dblib.c,v 1.191 2004-12-02 13:20:43 freddy77 Exp $";
+static char software_version[] = "$Id: dblib.c,v 1.192 2004-12-07 22:39:22 jklowden Exp $";
 static void *no_unused_var_warn[] = { software_version, no_unused_var_warn };
 
 static int _db_get_server_type(int bindtype);
@@ -5375,7 +5375,7 @@ dbwritetext(DBPROCESS * dbproc, char *objname, DBBINARY * textptr, DBTINYINT tex
 		return FAIL;
 
 	dbproc->tds_socket->out_flag = 0x07;
-	dbproc->tds_socket->state = TDS_QUERYING;
+	tds_set_state(dbproc->tds_socket, TDS_QUERYING);
 	tds_put_int(dbproc->tds_socket, size);
 
 	if (!text) {
